# inkstone

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  PRODUCT.md  biome.json  bunfig.toml  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json
.claude/: skills  (+1 more)
crates/core/: Cargo.toml
crates/core/migrations/: 0001_initial.sql  0002_settings.sql
crates/core/skills/inbox-triage/: SKILL.md
crates/core/src/: cancel.rs  config.rs  credentials.rs  db.rs  decide.rs  dispatcher.rs  entities.rs  field_spec.rs  hub.rs  launch.rs  localtime.rs  logging.rs  main.rs  mutate.rs  mutation.rs  mutation_target.rs  observations.rs  protocol.rs  provider_auth.rs  providers.rs  recurrence.rs  resume.rs  runs.rs  settings.rs  skills.rs  start_run.rs  web_embed.rs  worker.rs  workflow.rs  ws_origin.rs
crates/core/tests/: auth_status.rs  current_thread_journal_entries.rs  decouple.rs  end_to_end.rs  entity_list.rs  ephemeral_port.rs  faux_run.rs  fixture_gate.rs  listening.rs  logging.rs  media_attachments.rs  migration.rs  model_catalog.rs  multi_turn.rs  persistence_post.rs  persistence_reload.rs  persistence_stream.rs  persistence_terminal.rs  post_message.rs  post_to_thread.rs  proposal_cancel.rs  proposal_create_person.rs  proposal_create_project.rs  proposal_create_project_review.rs  proposal_create_todo.rs  proposal_create_todo_person_refs.rs  proposal_decide.rs  proposal_delete_journal_entry.rs  proposal_delete_person_todo.rs  proposal_delete_project.rs  proposal_journal_entry_source.rs  proposal_park.rs  proposal_record_observations.rs  proposal_restart.rs  proposal_review_context.rs  proposal_update_journal_entry.rs  proposal_update_person_project.rs  proposal_update_todo.rs  provider_configure.rs  provider_login.rs  (+24 more)
crates/core/workflows/: default.toml
(+1023 files in other folders)
