[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

[dev-dependencies]
assert_cmd = "2"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
tokio-tungstenite = "0.29"
