[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "process"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
assert_cmd = "2"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"
tokio-tungstenite = "0.29"
